DevOps/K8s/sample-k8s-code/istio-k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
  namespace: customer
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
  - match:
    - uri:
        exact: /customer
    # - uri:
    #     prefix: /static
    route:
    - destination:
        host: customer-service
        port:
          number: 8080
